force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Sold_To_Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Sales_Organization__c</fullName>
    <description>Sold to sales organization</description>
    <inlineHelpText>The Sales Organization for the Sold to of this Quote</inlineHelpText>
    <label>Sold To Sales Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>