force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Sub_Region_Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region_Sold_To__c</fullName>
    <description>Field to show account territory Sub Region</description>
    <inlineHelpText>Account territory Sub Region</inlineHelpText>
    <label>Sub Region (Sold To)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>