force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Submit_For_Approval_Error__c.field-meta.xml
<CustomField>
    <fullName>Submit_For_Approval_Error__c</fullName>
    <description>Validation message on basis of certain conditions reflected from onbefore insert and onbefore update triggers</description>
    <inlineHelpText>Validation error for Submit for approval button</inlineHelpText>
    <label>Submit For Approval Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>