force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Submit_for_approval_Time__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_approval_Time__c</fullName>
    <description>Capture the time when the quote is submit for approval</description>
    <label>Submit for approval Time</label>
    <type>DateTime</type>
</CustomField>