force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <description>Sum Of Netprice where line type Not equal to Product Service</description>
    <inlineHelpText>This is just the subtotal of the Net Price</inlineHelpText>
    <label>Subtotal</label>
    <summarizedField>Apttus_Proposal__Proposal_Line_Item__c.Apttus_QPConfig__NetPrice__c</summarizedField>
    <summaryFilterItems>
        <field>Apttus_Proposal__Proposal_Line_Item__c.Apttus_QPConfig__LineType__c</field>
        <operation>equals</operation>
        <value>Product/Service</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>