force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Template_Country__c.field-meta.xml
<CustomField>
    <fullName>Template_Country__c</fullName>
    <description>DCP-29728 To check the value of Country present on Ship To and Ultimate Consignee for template</description>
    <formula>Ship_To__r.Country__c  + &apos;,&apos; + Ship_To__r.Country_Local__c + &apos;,&apos; + Ultimate_Consignee__r.BillingCountry + &apos;,&apos; + Ultimate_Consignee__r.Country_Local__c</formula>
    <label>Template Country</label>
    <type>Text</type>
</CustomField>