force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Template_Material_class_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Template_Material_class_Rollup__c</fullName>
    <description>Rolls up Template Material class flag from Quotation line item.</description>
    <label>Template Material class Rollup</label>
    <summarizedField>Apttus_Proposal__Proposal_Line_Item__c.Template_Material_Class_Flag__c</summarizedField>
    <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>