force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Template_Remaining_Prepay__c.field-meta.xml
<CustomField>
    <fullName>Template_Remaining_Prepay__c</fullName>
    <description>Calculates remaining prepay percentage</description>
    <formula>100 - Prepay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Remaining Prepay%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>