force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Territory_Region__c.field-meta.xml
<CustomField>
    <fullName>Territory_Region__c</fullName>
    <description>Stamped through the territory region of Sold to Account of Opportunity.</description>
    <formula>Apttus_Proposal__Opportunity__r.Account.Territory_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Region</label>
    <type>Text</type>
</CustomField>