force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Time_To_Finalize__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Finalize__c</fullName>
    <description>Time from quote create to cart finalization.</description>
    <formula>(Apttus_QPConfig__ConfigurationFinalizedDate__c - CreatedDate)*24*60</formula>
    <label>Time To Finalize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>