force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <description>Field to store Total discount</description>
    <inlineHelpText>Total discount amount summed up</inlineHelpText>
    <label>Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>