force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Total_Distributor_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Total_Distributor_Rebate__c</fullName>
    <description>It is sum of the all Distributor Rebates or Manual rebate and calculates the value from the Proposal Line Item</description>
    <inlineHelpText>Sum of all quotation line item distributor rebates</inlineHelpText>
    <label>Total Distributor Rebate</label>
    <summarizedField>Apttus_Proposal__Proposal_Line_Item__c.Template_Total_Distributor_Rebate__c</summarizedField>
    <summaryFilterItems>
        <field>Apttus_Proposal__Proposal_Line_Item__c.Apttus_QPConfig__HasOptions__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>