force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Total_Net__c.field-meta.xml
<CustomField>
    <fullName>Total_Net__c</fullName>
    <description>Field for total net price</description>
    <inlineHelpText>The net value of the quote after discounts but also includes freight and taxes.</inlineHelpText>
    <label>Total Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>