force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Total_Stacked_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Stacked_Discount__c</fullName>
    <description>Sum of "Stacked Discount Amount" from all Quotation line item</description>
    <label>Total Stacked Discount</label>
    <summarizedField>Apttus_Proposal__Proposal_Line_Item__c.Stacked_Discount_Amount__c</summarizedField>
    <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>