force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Transborder_Flag__c.field-meta.xml
<CustomField>
    <fullName>Transborder_Flag__c</fullName>
    <description>Flag to check opportunity Transborder Flag</description>
    <formula>Apttus_Proposal__Opportunity__r.Transborder_Flag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transborder Flag</label>
    <type>Checkbox</type>
</CustomField>