force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Ultimate_Consignee__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Consignee__c</fullName>
    <description>Lookup to Account for Ultimate Consignee</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of entity using product/solution;  specific to location where solution/will be installed or relocated. Required through opportunity lifecycle; drives pricebook (direct channel). Changes to UC after Quote Approved invalidates Quote and changes stage to Denied.</inlineHelpText>
    <label>Ultimate Consignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proposals (Ultimate Consignee)</relationshipLabel>
    <relationshipName>Ultimate_Consignee</relationshipName>
    <type>Lookup</type>
</CustomField>