force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Ultimate_Consignee_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Consignee_ERP_Number__c</fullName>
    <description>ERP Customer Id of Ultimate Consignee</description>
    <formula>Ultimate_Consignee__r.ERP_Customer_Id__c</formula>
    <label> Ultimate Consignee ERP Number</label>
    <type>Text</type>
</CustomField>