force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Ultimate_Consignee_Region__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Consignee_Region__c</fullName>
    <description>Ultimate Consignee Region</description>
    <label>Ultimate Consignee Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>