force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/User_Title__c.field-meta.xml
<CustomField>
    <fullName>User_Title__c</fullName>
    <description>Fetch User Title</description>
    <formula>CreatedBy.Title</formula>
    <label>User Title</label>
    <type>Text</type>
</CustomField>