force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Validation_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Validation_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[DCP-34910] - Tells whether the quote is currently going through Validation Call</description>
    <label>Validation In Progress</label>
    <type>Checkbox</type>
</CustomField>