force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Validation_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Validation_Start_Time__c</fullName>
    <description>[DCP-34910] - Used to fire process builder after &quot;X&quot; minutes when Async Validation starts</description>
    <label>Validation Start Time</label>
    <type>DateTime</type>
</CustomField>