force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/View_Contract__c.field-meta.xml
<CustomField>
    <fullName>View_Contract__c</fullName>
    <description>This field determines if Sales Contract button should be visible on page layout or not. The decision is based on values from metadata record : Code_Parameter__mdt.Sales_Contract_Access</description>
    <formula>AND( 
				Contains( $CustomMetadata.Code_Parameter__mdt.Sales_Contract_Access.Values_Text__c ,  $Profile.Name ),
				Contains( $CustomMetadata.Code_Parameter__mdt.Sales_Contract_Access.PickListValue__c , Sold_To_Sales_Organization__c ),
				Contains( $CustomMetadata.Code_Parameter__mdt.Sales_Contract_Access.PickListValue__c , TEXT( Apttus_Proposal__Approval_Stage__c ) )
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Contract</label>
    <type>Checkbox</type>
</CustomField>