force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Web_Visible__c.field-meta.xml
<CustomField>
    <fullName>Web_Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>DCP-1058 - Is Web Visible?</description>
    <inlineHelpText>Click to enable Quote/Proposal visibility on MyIllumina.</inlineHelpText>
    <label>Web Visible</label>
    <type>Checkbox</type>
</CustomField>