force-app/main/default/objects/Apttus_Proposal__Proposal__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <businessOwnerUser>gis@illumina.com</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores Work Order reference used for Break-Fix Quoting</description>
    <inlineHelpText>Stores Work Order reference used for Break-Fix Quoting</inlineHelpText>
    <label>Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>Quotations</relationshipLabel>
    <relationshipName>Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>