force-app/main/default/objects/Apttus_Proposal__Proposal__c/recordTypes/Custom_Product_Quote.recordType-meta.xml
<RecordType>
    <fullName>Custom_Product_Quote</fullName>
    <active>true</active>
    <description>This will be used for Custom Quote. No Buttons and Link will be available for this record type.</description>
    <label>Custom Product Quote</label>
</RecordType>