force-app/main/default/objects/Apttus_Proposal__Proposal__c/recordTypes/Proposal_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Proposal_Read_Only</fullName>
    <active>true</active>
    <description>Record type to lock all fields on Quote record.</description>
    <label>Proposal Read Only</label>
    </RecordType>