force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/CheckDiscountJustificationOnReview.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckDiscountJustificationOnReview</fullName>
    <active>true</active>
    <description>Prevent users from changing Discount Justification value when quote stage is In Review.</description>
    <errorConditionFormula>AND (
    TEXT ( Apttus_Proposal__Approval_Stage__c ) = $Label.QuoteStageInReview, 
    NOT (
        OR (     
            ISCHANGED ( Is_Updated_By_System__c ),
            Is_Updated_By_System__c,
           $Setup.cs_Apex_Settings__c.Bypass_All_Validations__c,
            Invalid_Quote__c
        )
    ),  
    ISCHANGED ( Discount_Justification__c )  
)</errorConditionFormula>
    <errorDisplayField>Discount_Justification__c</errorDisplayField>
    <errorMessage>Discount Justification cannot be updated when quote is In Review.</errorMessage>
</ValidationRule>