force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/CheckDiscountReasonOnApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckDiscountReasonOnApproved</fullName>
    <active>true</active>
    <description>Prevent users from changing Discount Reason when quote stage is Approved, Generated or Presented.</description>
    <errorConditionFormula>AND (
    OR (
        TEXT ( Apttus_Proposal__Approval_Stage__c ) = $Label.QuotationApprovalStatusApproved,
        TEXT ( Apttus_Proposal__Approval_Stage__c ) = $Label.QuoteStageGenerated,
        TEXT ( Apttus_Proposal__Approval_Stage__c ) = $Label.QuoteStagePresented
    ), 
    NOT (
        OR (     
            ISCHANGED ( Is_Updated_By_System__c ),
            Is_Updated_By_System__c,
            Invalid_Quote__c
        )
    ),   
    ISCHANGED ( Discount_Reason__c )  
)</errorConditionFormula>
    <errorDisplayField>Discount_Reason__c</errorDisplayField>
    <errorMessage>Discount Reason cannot be updated after quote is Approved.</errorMessage>
</ValidationRule>