force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/CheckDiscountReasonOnReview.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckDiscountReasonOnReview</fullName>
    <active>true</active>
    <description>Prevent users from changing Discount Reason when quote stage is In Review.</description>
    <errorConditionFormula>AND (
    TEXT ( Apttus_Proposal__Approval_Stage__c ) = $Label.QuoteStageInReview, 
    NOT (
        OR (     
            ISCHANGED ( Is_Updated_By_System__c ),
            Is_Updated_By_System__c,
            Invalid_Quote__c
        )
    ),  
    ISCHANGED ( Discount_Reason__c )  
)</errorConditionFormula>
    <errorDisplayField>Discount_Reason__c</errorDisplayField>
    <errorMessage>Discount Reason cannot be updated when quote is In Review.</errorMessage>
</ValidationRule>