force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/CheckDistributorERPId.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckDistributorERPId</fullName>
    <active>true</active>
    <description>ERP ID on SoldTo Account is mandatory for creating Quote.</description>
    <errorConditionFormula>AND (
    ISNEW(),
    NOT (
        ISBLANK ( Apttus_Proposal__Opportunity__r.Distributor__c )
    ),
    ISBLANK ( Apttus_Proposal__Opportunity__r.Distributor__r.ERP_Customer_Id__c ),
	NOT ( 
        OR ( 
           ISCHANGED ( Is_Updated_By_System__c ), 
           Is_Updated_By_System__c 
           ) 
    )
)</errorConditionFormula>
    <errorMessage>Cannot add product or quote since the Distributor on this opportunity does not have an ERP ID. Please obtain an ERP ID by submitting a Master Data Request on the Distributor account.</errorMessage>
</ValidationRule>