force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/CheckFieldAccessOnQuoteTypeReOrder.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckFieldAccessOnQuoteTypeReOrder</fullName>
    <active>false</active>
    <description>Prevents the user to edit the certain fields irrespective of the quote stage</description>
    <errorConditionFormula>AND ( 
    AND (
       OR ( 
           CONTAINS(Quote_Type__c , &quot;Direct Reorder and Custom Product&quot;),
           CONTAINS(Quote_Type__c , &quot;Indirect Reorder and Custom Product&quot;)
       ),
       CONTAINS(Quote_Sub_Type__c , &quot;Custom Product (First Buy)&quot;)
    ),
    NOT ( 
        OR (     
            ISCHANGED ( Apttus_Proposal__Approval_Stage__c), 
            ISCHANGED ( Apttus_QPApprov__Approval_Status__c) 
        )    
    ) ,
    OR ( 
        TEXT( Apttus_Proposal__Approval_Stage__c ) = $Label.QuoteStageDraft, 
        TEXT( Apttus_Proposal__Approval_Stage__c ) = $Label.QuoteStageApprovalRequired,
        TEXT( Apttus_Proposal__Approval_Stage__c ) = $Label.QuoteStageInReview, 
        TEXT( Apttus_Proposal__Approval_Stage__c ) = $Label.QuotationApprovalStatusApproved, 
        TEXT( Apttus_Proposal__Approval_Stage__c ) = $Label.QuoteStageGenerated, 
        TEXT( Apttus_Proposal__Approval_Stage__c ) = $Label.QuoteStagePresented
    ) , 
    OR ( 
        ISCHANGED ( Apttus_Proposal__Presented_Date__c), 
        ISCHANGED ( Apttus_Proposal__Opportunity__c),
        ISCHANGED ( Apttus_QPConfig__PricingDate__c), 
        ISCHANGED ( Quote_Output_Generated_Valid_From_Date__c),
        ISCHANGED ( Apttus_Proposal__Proposal_Expiration_Date__c), 
        ISCHANGED ( Apttus_Proposal__Proposal_Approval_Date__c),
        ISCHANGED ( Apttus_Proposal__Primary_Contact__c), 
        ISCHANGED ( Discount_Reason__c),  
        ISCHANGED ( Discount_Justification__c), 
        ISCHANGED ( Quote_Type__c),
        ISCHANGED ( Quote_Sub_Type__c), 
        ISCHANGED ( Apttus_QPConfig__PriceListId__c),
        ISCHANGED ( Apttus_Proposal__Account__c), 
        ISCHANGED ( Ultimate_Consignee__c),
        ISCHANGED ( Bill_To__c), 
        ISCHANGED ( Ship_To__c),  
        ISCHANGED ( Payer__c),
        ISCHANGED ( Distributor__c),
        ISCHANGED ( Direct_Sale_to_Ultimate_Consignee__c), 
        ISCHANGED ( Territory_Region__c),
        ISCHANGED ( Apttus_Proposal__Primary__c),
        ISCHANGED ( Invalid_Quote__c),
       /* ISCHANGED ( Apttus_Proposal__Approval_Stage__c), 
          ISCHANGED ( Apttus_QPApprov__Approval_Status__c), 
          ISCHANGED ( Total_Cart_Discount__c),  */
        ISCHANGED ( Contract_Numbers__c),
        ISCHANGED ( Apttus_Proposal__Payment_Term__c), 
        ISCHANGED ( Inco_Term_1__c),
        ISCHANGED ( CurrencyIsoCode), 
        ISCHANGED ( Post_Pricing_Message_List__c),
        ISCHANGED ( Post_Pricing_Message__c), 
        ISCHANGED ( Estimated_Freight__c),  
        ISCHANGED ( Estimated_Tax__c),
        ISCHANGED ( Promotion_Id__c), 
        ISCHANGED ( SAP_Quote__c)
    ), 
    NOT ( 
        OR ( 
            ISCHANGED ( Is_Updated_By_System__c ),
            Is_Updated_By_System__c, 
            Invalid_Quote__c 
        ) 
    )
)</errorConditionFormula>
    <errorMessage>You cannot edit the fields on the Custom type quote</errorMessage>
</ValidationRule>