force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/CheckForValidOpportunityAccountsStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckForValidOpportunityAccountsStatus</fullName>
    <active>true</active>
    <description>Prevents the user from creating or editing a quotation if related Oppportunity Accounts(UC, distributor, lessor customer, account) when in Pending Obsolete Or Obsolete status.</description>
    <errorConditionFormula>AND (
    NOT ( 
        OR (
            ISCHANGED ( Is_Updated_By_System__c ),
            Is_Updated_By_System__c
        )
     ),
     OR (    
         TEXT ( Apttus_Proposal__Opportunity__r.Account.Account_Status__c ) = $Label.AccountStatusObsolete ,
         TEXT ( Apttus_Proposal__Opportunity__r.Account.Account_Status__c ) = $Label.AccountStatusPendingObsolete ,
         TEXT ( Apttus_Proposal__Opportunity__r.Ultimate_Consignee__r.Account_Status__c ) = $Label.AccountStatusObsolete,
         TEXT ( Apttus_Proposal__Opportunity__r.Ultimate_Consignee__r.Account_Status__c ) = $Label.AccountStatusPendingObsolete,
         TEXT ( Apttus_Proposal__Opportunity__r.Distributor__r.Account_Status__c ) = $Label.AccountStatusObsolete,
         TEXT ( Apttus_Proposal__Opportunity__r.Distributor__r.Account_Status__c ) = $Label.AccountStatusPendingObsolete,
         TEXT ( Apttus_Proposal__Opportunity__r.Lessor_Customer__r.Account_Status__c ) = $Label.AccountStatusObsolete,
         TEXT ( Apttus_Proposal__Opportunity__r.Lessor_Customer__r.Account_Status__c ) = $Label.AccountStatusPendingObsolete      
    ),  
    /* Bypassing the rule when send via Email */
    AND (
         NOT( ISPICKVAL ( Apttus_Proposal__Approval_Stage__c, &apos;Presented&apos;) )
    )
)</errorConditionFormula>
    <errorMessage>Cannot create or edit quotation as one or more accounts associated are obsolete or pending obsolete.</errorMessage>
</ValidationRule>