force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/CheckGlobalLanguageForPostPrimaryMessage.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckGlobalLanguageForPostPrimaryMessage</fullName>
    <active>true</active>
    <description>Validation Rule to check that Global Language should not be editable when Post Primary Message is blank.</description>
    <errorConditionFormula>AND (
    NOT( Quote_Sub_Type__c == $Label.OpportunityTypeCustomProductFirstBuy),
    ISBLANK( Post_Pricing_Message_List__c ),
    NOT (
        OR (
            ISBLANK ( Post_Pricing_Message__c ),
            ISCHANGED ( Is_Updated_By_System__c ),
            Is_Updated_By_System__c
        )
    )
)</errorConditionFormula>
    <errorMessage>Global Language cannot be edited when Post Primary is blank.</errorMessage>
</ValidationRule>