force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/CheckIfAsyncValidationInProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckIfAsyncValidationInProgress</fullName>
    <active>true</active>
    <description>DCP-34910 Check if the record is going through the Validate Cart process.</description>
    <errorConditionFormula>IF(
AND
(
Validation_In_Progress__c,NOT(ISCHANGED(Validation_In_Progress__c)),
NOT
(
OR($Profile.Name = $Label.ProfileIntegrationSalesSnapLogic,
$Profile.Name = $Label.ProfileSystemAdmin,
ISCHANGED ( Is_Updated_By_System__c ),
Is_Updated_By_System__c)
)
),true,false
)</errorConditionFormula>
    <errorMessage>You cannot edit the record while validation is in progress.</errorMessage>
</ValidationRule>