force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/CheckIncoTermsOnApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckIncoTermsOnApproved</fullName>
    <active>true</active>
    <description>Prevent users from changing Inco Terms when quote stage is Approved, Generated or Presented.</description>
    <errorConditionFormula>AND (
    OR (
        TEXT ( Apttus_Proposal__Approval_Stage__c ) = $Label.QuotationApprovalStatusApproved,
        TEXT ( Apttus_Proposal__Approval_Stage__c ) = $Label.QuoteStageGenerated,
        TEXT ( Apttus_Proposal__Approval_Stage__c ) = $Label.QuoteStagePresented
    ), 
    NOT (
        OR (     
            ISCHANGED ( Is_Updated_By_System__c ),
            Is_Updated_By_System__c,
            Invalid_Quote__c
        )
    ),   
    ISCHANGED ( Inco_Term_1__c )
)</errorConditionFormula>
    <errorDisplayField>Inco_Term_1__c</errorDisplayField>
    <errorMessage>Incoterm1 cannot be updated after quote is Approved.</errorMessage>
</ValidationRule>