force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/CheckIncoTermsOnReview.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckIncoTermsOnReview</fullName>
    <active>true</active>
    <description>Prevent users from changing Inco Terms value when quote stage is In Review.</description>
    <errorConditionFormula>AND (
    TEXT ( Apttus_Proposal__Approval_Stage__c ) = $Label.QuoteStageInReview, 
    NOT (
        OR (     
            ISCHANGED ( Is_Updated_By_System__c ),
            Is_Updated_By_System__c,
            Invalid_Quote__c
        )
    ),   
    ISCHANGED ( Inco_Term_1__c )  
)</errorConditionFormula>
    <errorDisplayField>Inco_Term_1__c</errorDisplayField>
    <errorMessage>Incoterm1 cannot be updated when quote is In Review.</errorMessage>
</ValidationRule>