force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/CheckLockQuoteEditIfInvalid.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckLockQuoteEditIfInvalid</fullName>
    <active>true</active>
    <description>This rule will prevent the user to edit or update the existing quotes if the invalid flag is set to true.</description>
    <errorConditionFormula>AND (
    NOT (
        OR (     
            ISCHANGED ( Is_Updated_By_System__c ),
            Is_Updated_By_System__c,
            $Setup.cs_Apex_Settings__c.Bypass_All_Validations__c,
            ISCHANGED(Invalid_Quote__c)
        )
    ),
    Invalid_Quote__c
)</errorConditionFormula>
    <errorMessage>Change in Ultimate Consignee has converted opportunity to a Transborder transaction. Previous quote(s) cannot be updated and new quote must be created.</errorMessage>
</ValidationRule>