force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/CheckNoEditOnAcceptedStage.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckNoEditOnAcceptedStage</fullName>
    <active>true</active>
    <description>Prevents edit on Quote record when Quote stage is Accepted.</description>
    <errorConditionFormula>AND (
    TEXT ( PRIORVALUE ( Apttus_Proposal__Approval_Stage__c ) ) = $Label.QuoteStageAccepted,
				ISCHANGED ( RecordTypeId ), 
    NOT (
        OR (     
            ISCHANGED ( Is_Updated_By_System__c ),
            Is_Updated_By_System__c,
            Invalid_Quote__c
        )
    )  
)</errorConditionFormula>
    <errorMessage>This quote cannot be edited in Accepted status.</errorMessage>
</ValidationRule>