force-app/main/default/objects/Apttus_Proposal__Proposal__c/validationRules/CheckOpportunityCurrentUltimateConsignee.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckOpportunityCurrentUltimateConsignee</fullName>
    <active>true</active>
    <description>Current ultimate consignee on related relocation opportunity is mandatory before creation of quote.</description>
    <errorConditionFormula>AND( 
 NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
ISBLANK(Apttus_Proposal__Opportunity__r.Current_Ultimate_Consignee__c) ,
   INCLUDES(Apttus_Proposal__Opportunity__r.Product_Interest__c, &apos;Relocation&apos;)
)</errorConditionFormula>
    <errorMessage>Please enter the current Ultimate consignee before creating a quote.</errorMessage>
</ValidationRule>